Fixes letter spacing in blog

--- a/resources/assets/less/clean-blog/clean-blog.less
+++ b/resources/assets/less/clean-blog/clean-blog.less
@@ -10,8 +10,6 @@ body {
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  word-spacing: 1px;
-  letter-spacing: 1px;
 }
 
 // -- Typography
@@ -107,7 +105,6 @@ hr.small {
         text-transform: uppercase;
         font-size: 12px;
         font-weight: 800;
-        letter-spacing: 1px;
       }
     }
   }
@@ -193,7 +190,6 @@ hr.small {
 .page-header {
   text-align: center;
   font-size: 16px;
-  letter-spacing: 3px;
   font-weight: 500;
   border: none;
   margin-bottom: -5px;
@@ -376,7 +372,6 @@ hr.small {
   text-transform: uppercase;
   font-size: 15px;
   font-weight: 800;
-  letter-spacing: 1px;
   border-radius: 0;
   padding: 15px 25px;
 }
@@ -410,7 +405,6 @@ hr.small {
       text-transform: uppercase;
       font-size: 15px;
       font-weight: 400;
-      letter-spacing: 1px;
       padding: 15px 25px;
       background-color: white;
     }
